# amos2024ss07-updating-flash-boot-loader

./: .gitignore  Cpu0_Main.c  GUI_Build.bat  GUI_Package.bat  GUI_Run.bat  README.md  Testing_Build.bat  Testing_Run.bat  can_driver.c  can_driver.h  can_init.h  leds.h  run_GUI.bat
Deliverables/: feature-board.tsv
Deliverables/sprint-01/: feature-board.tsv
Deliverables/sprint-02/: feature-board.tsv
Deliverables/sprint-03/: feature-board.tsv
Deliverables/sprint-04/: feature-board.tsv
Deliverables/sprint-05/: feature-board.tsv
Deliverables/sprint-06/: feature-board.tsv
Deliverables/sprint-08/: feature-board.tsv
Deliverables/sprint-09/: feature-board.tsv
Deliverables/sprint-10/: feature-board.tsv
Deliverables/sprint-11/: feature-board.tsv
Deliverables/sprint-12/: feature-board.tsv
Deliverables/sprint-13/: project-summary.docx
Documentation/: Development_Process.md  Getting_Started.md  Improvements.md
Documentation/Architecture/: AMOS_Flashbootloader_SW_Architecture.uxf  AMOS_Flashbootloader_SW_Architektur.uxf  AMOS_Flashbootloader_SW_Runtime_Objects.uxf  Readme.md
Documentation/ISO_15765-2/: README.md
Documentation/UDS_Communication/: Readme.md  Security_Access.uxf  Session_Handling.uxf  Switch_ASW_Bootloader.uxf  Switch_Bootloader_ASW.uxf
GUI_Snippets/CAN_Wrapper/: .cproject  .gitignore  Readme.md
MCU_Aurix/: .cproject  .gitignore  .project  Lcf_Tasking_Tricore_Tc.lsl  MCU_Aurix.launch  Makefile  Readme.md  aswdummy.c  aswdummy.h
MCU_Aurix/06_binary_converter/: README.md  main.c
MCU_Aurix/LED/: led_driver.c  led_driver.h  led_driver_TC375_LK.h
MCU_Aurix/S19_converter/: .cproject  Cpu0_Main.c
MCU_Aurix/S19_to_binary/: main.c
MCU_Aurix/Test/: .cproject  .gitignore  can_driver.c  can_driver.h  can_init.h  leds.c  leds.h
MCU_Aurix/flash/: flash.c  flash.h  flash_TC375_LK.h
MCU_Aurix/main/: Cpu0_Main.c  Cpu2_Main.c
MCU_Aurix/src/: Cpu0_Main.c  Cpu2_Main.c
Scripts/: GUI_Build.bat  GUI_Package.bat  GUI_Run.bat  Testing_Build.bat  Testing_Run.bat
TESTING_WINDOWS_GUI/: CMakeLists.txt  Testing_Build.bat  Testing_Run.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testcase.cpp  testcase.hpp  testcasecontroller.cpp  testcasecontroller.hpp  testcases.cpp  testcases.h  testcases.hpp
TESTING_WINDOWS_GUI/Communication/: VirtualDriver.cpp
TESTING_WINDOWS_GUI/Communication_Layer/: Communication.cpp  Communication.hpp
TESTING_WINDOWS_GUI/Testcases/: ecu_isotp.cpp  ecu_isotp.hpp  ecu_test.cpp  ecu_test.hpp  selftest.cpp  selftest.hpp  uds_listening.cpp  uds_listening.hpp
TESTING_WINDOWS_GUI/UDS_Layer/: UDS.cpp  UDS.hpp
WINDOWS_GUI/: CCRC32.cpp  CMakeLists.txt  GUI_Build.bat  GUI_Package.bat  GUI_Run.bat  Readme.md  application.qrc  can_wrapper.hpp  crc.c  editableComboBox.h  editablecombobox.cpp  flashmanager.cpp  flashmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui  validatemanager.cpp  validatemanager.h
WINDOWS_GUI/Communication/: Can_Wrapper.cpp  Can_Wrapper.hpp  CommInterface.cpp  CommInterface.hpp  VirtualDriver.cpp  VirtualDriver.h  VirtualDriver.hpp
WINDOWS_GUI/Communication_Layer/: CommInterface.cpp  Communication.cpp  Communication.h  Communication.hpp
asw_dummy_new/: .cproject  .project  Cpu0_Main.c  Lcf_Gnuc_Tricore_Tc.lsl  Lcf_Tasking_Tricore_Tc.lsl  SCU_Reset.c  can_driver.c  can_driver.h  can_driver_TC375_LK.h  led_driver.c  led_driver_TC375_LK.h  reset_TC375_LK.h
binary_converter/: converter.c
can_driver/: Cpu0_Main.c  can_driver.h  leds.c
can_driver0.1/: Cpu0_Main.c  README.MD  can_driver.h
dummy_asw/: .cproject  .project  Lcf_Tasking_Tricore_Tc.lsl  aswdummy.c  aswdummy.h  led_driver.h
(+576 files in other folders)
